--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.7",
+        "orangehill/iseed": "^3.0",
         "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
